--- a/main.css
+++ b/main.css
@@ -12,7 +12,14 @@ a:link, a:visited {
     clear:both;
 }
 
+.investor-container {
+    position:absolute;
+    bottom:0px;
+    right:0px;
+}
+
 .market {
+    position:relative;
     height:100%;
 }
 
@@ -37,10 +44,10 @@ a:link, a:visited {
     background-color:#eee;
     border-top:1px solid #000;
     border-left:1px solid #000;
+    font-size:10px;
 }
 
 .stock {
-    font-size:10px;
     border-bottom:1px solid #000;
 }
 
