--- a/main.css
+++ b/main.css
@@ -8,6 +8,13 @@ a:link, a:visited {
     color:#ccc;
 }
 
+.button {
+    cursor:pointer;
+    float:left;
+    border:1px solid #000;
+    margin-right:2px;
+}
+
 .clear {
     clear:both;
 }
