--- a/main.css
+++ b/main.css
@@ -3,6 +3,11 @@
  - Global classes at top in alphabetical order
  - IDs in alphabetical order with sections indented (4 spaces)
 */
+
+button {
+    float:left;
+}
+
 a:link, a:visited {
     text-decoration:none;
     color:#ccc;
@@ -11,17 +16,54 @@ a:link, a:visited {
 .button {
     cursor:pointer;
     float:left;
-    border:1px solid #000;
     margin-right:2px;
+}
+
+.canvas {
+    position:absolute;
+    top:29px;
+    left:0px;
+}
+
+.cash {
+    position:absolute;
+    top:0px;
+    left:50px;
+}
+
+.control-container {
+    position:absolute;
+    top:4px;
+    left:108px;
 }
 
 .clear {
     clear:both;
 }
 
+.faster {
+    width:21px;
+    height:20px;
+    background:url('faster.png') no-repeat;
+    margin-top:2px;
+}
+
 .investor-container {
     position:absolute;
-    bottom:0px;
+    top:0px;
+    right:0px;
+    border:1px solid #000;
+    width:240px;
+    height:26px;
+}
+
+    .investor-container div {
+        float:left;
+    }
+
+.investor-stock-container {
+    position:absolute;
+    top:0px;
     right:0px;
 }
 
@@ -34,6 +76,19 @@ a:link, a:visited {
         border-right:1px solid #eee;
     }
 
+.pause {
+    width:20px;
+    height:19px;
+    margin:auto;
+    background:url('pause.png') no-repeat;
+}
+
+.play {
+    width:20px;
+    height:19px;
+    background:url('play.png') no-repeat;
+}
+
 .priceDown {
     color:red;
 }
@@ -45,17 +100,23 @@ a:link, a:visited {
 .sidebar {
     position:absolute;
     top:0px;
-    right:0px;
-    width:59px;
-    height:280px;
+    left:0px;
+    width:460px;
+    height:29px;
     background-color:#eee;
-    border-top:1px solid #000;
-    border-left:1px solid #000;
-    font-size:10px;
+    font-size:12px;
+}
+
+.slower {
+    width:21px;
+    height:20px;
+    background:url('slower.png') no-repeat;
+    margin-top:2px;
 }
 
 .stock {
-    border-bottom:1px solid #000;
+    border-right:1px solid #000;
+    float:left;
 }
 
 .stock-symbol {
@@ -68,6 +129,13 @@ a:link, a:visited {
 
 .stock-change {
     float:left;
+}
+
+.worth {
+    position:absolute;
+    bottom:0px;
+    left:0px;
+    font-weight:bold;
 }
 
 #change {
